Fix Wizard's alignment issues within its container and with its title header

--- a/src/components/MigrationWizard/MigrationWizard.scss
+++ b/src/components/MigrationWizard/MigrationWizard.scss
@@ -24,6 +24,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   box-sizing: border-box;
   flex-flow: column;
   display: flex;
+  align-items: center;
   .stepTitle {
     font-weight: $weight-light;
     font-size: 32px;
@@ -36,7 +37,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 }
 .container {
   flex: 1;
-  margin: 0 auto;
+  margin-left: -32px;
   padding: 0px 0px 70px 32px;
   overflow-y: auto;
   overflow-x: hidden;
